--- a/package.json
+++ b/package.json
@@ -19,5 +19,25 @@
   "bugs": {
     "url": "https://github.com/sudazx/angular-transfer-box/issues"
   },
-  "homepage": "https://github.com/sudazx/angular-transfer-box#readme"
+  "homepage": "https://github.com/sudazx/angular-transfer-box#readme",
+  "devDependencies": {
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-jshint": "^2.0.1",
+    "gulp-less": "^3.1.0",
+    "gulp-load-plugins": "^1.3.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-replace": "^0.5.4",
+    "gulp-size": "^2.1.0",
+    "gulp-uglify": "^1.5.3",
+    "jshint": "^2.9.2",
+    "jshint-stylish": "^2.2.0"
+  },
+  "dependencies": {
+    "angular": "^1.5.8",
+    "reset.css": "^2.0.2"
+  }
 }
